# mcstatusio

./: README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
docs/: conf.py  index.rst  installation.rst  mcstatusio.rst  modules.rst  requirements.txt  usage.rst
mcstatusio/: BedrockServer.py  JavaServer.py  __init__.py  constants.py  exceptions.py
tests/: test_bedrock.py  test_java.py
