[project]
name = "mcstatusio"
version = "1.0.0"
description = "A Python wrapper for the mcstatus.io API."
readme = "README.md"
authors = [
    { name = "Rezn1r", email = "rezn1r@proton.me" },
]
license = "MIT"
requires-python = ">=3.11,<3.13"
dependencies = [
    "aiohttp>=3.13.1",
    "requests>=2.32.5",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
"Homepage" = "https://githuv.com/rzn1r/mcstatusio"
"Repository" = "https://githuv.com/rzn1r/mcstatusio"
"Issues" = "https://githuv.com/rzn1r/mcstatusio/issues"
"Documentation" = "https://mcstatusio.readthedocs.io/"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
]

